--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -4,6 +4,7 @@ xmlns="http://java.sun.com/xml/ns/javaee"
 xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+
 	<servlet>
 		<servlet-name>Stock_java_mta</servlet-name>
 		<servlet-class>com.mta.javacourse.Stock_java_mtaServlet</servlet-class>
@@ -12,6 +13,16 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>Stock_java_mta</servlet-name>
 		<url-pattern>/stock_java_mta</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>Stock_Details_Servlet</servlet-name>
+		<servlet-class>com.mta.javacourse.Stock_Details_Servlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Stock_Details_Servlet</servlet-name>
+		<url-pattern>/stockdetails</url-pattern>
+	</servlet-mapping>	
+	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
