--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -15,11 +15,11 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	</servlet-mapping>
 	
 	<servlet>
-		<servlet-name>Stock_Details_Servlet</servlet-name>
-		<servlet-class>com.mta.javacourse.Stock_Details_Servlet</servlet-class>
+		<servlet-name>StockDetailsServlet</servlet-name>
+		<servlet-class>com.mta.javacourse.StockDetailsServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>Stock_Details_Servlet</servlet-name>
+		<servlet-name>StockDetailsServlet</servlet-name>
 		<url-pattern>/stockdetails</url-pattern>
 	</servlet-mapping>	
 	
